--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 
-    <footer><a href="https://www.instagram.com/kauan.rez/profilecard/?igsh=b3N3c3g3cXR2OXdj">Kauan Henrique</a></footer>
+    <footer><a href="https://www.instagram.com">Haniel Martins</a></footer>
 
 
     <script src="/script.js"></script>
